--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -2,42 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! Python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print (\"Hello! Python\")"
+    "n=5\n",
+    "m=10\n",
+    "total=n+m\n",
+    "input('請輸入n的值')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15"
+       "9"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n=5\n",
-    "m=10\n",
+    "#使用input(),請使用者自行輸入\n",
+    "n=int(input('請輸入n值'))\n",
+    "m=int(input('請輸入m值'))\n",
     "total=n+m\n",
-    "total\n"
+    "total"
    ]
   }
  ],
