--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -58,6 +58,53 @@
     "total=n+m\n",
     "total"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3 qq ab 3.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "#一個引數值\n",
+    "print(3)\n",
+    "#多個引數\n",
+    "print(3,\"qq\",\"ab\",3.14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.145+555=558.145\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=eval(input('請輸入n值'))\n",
+    "m=eval(input('請輸入m值'))\n",
+    "total=n+m\n",
+    "#字串差補\n",
+    "print(f\"{n}+{m}={total:.3f}\")"
+   ]
   }
  ],
  "metadata": {
