--- a/lesson3_2.ipynb
+++ b/lesson3_2.ipynb
@@ -2,10 +2,79 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=5\n",
+    "n=n+5\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "三數相加的總數是146.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "total=0\n",
+    "value=eval(input(\"請輸入第1個數值:\"))\n",
+    "total=value+total\n",
+    "\n",
+    "value=eval(input(\"請輸入第2個數值:\"))\n",
+    "total=value+total\n",
+    "\n",
+    "value=eval(input(\"請輸入第3個數值:\"))\n",
+    "total=value+total\n",
+    "\n",
+    "print(f\"三數相加的總數是{total}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "三數相加的總數是60.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "total=0\n",
+    "value=eval(input(\"請輸入第1個數值:\"))\n",
+    "total+=value\n",
+    "\n",
+    "value=eval(input(\"請輸入第2個數值:\"))\n",
+    "total+=value\n",
+    "\n",
+    "value=eval(input(\"請輸入第3個數值:\"))\n",
+    "total+=value\n",
+    "\n",
+    "print(f\"三數相加的總數是{total}\")"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +84,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.13"
   }
  },
