--- a/lesson3_2.ipynb
+++ b/lesson3_2.ipynb
@@ -75,6 +75,36 @@
     "\n",
     "print(f\"三數相加的總數是{total}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "對邊:20,斜邊為40\n",
+      "角度為30.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "side=eval(input(\"請輸入對邊:\"))\n",
+    "another_side=eval(input(\"請輸入斜邊:\"))\n",
+    "\n",
+    "radian=math.asin(side/another_side)\n",
+    "degree=math.degrees(radian)\n",
+    "print(f\"對邊:{side},斜邊為{another_side}\")\n",
+    "print(f\"角度為{degree:2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
