--- a/lesson4_2.ipynb
+++ b/lesson4_2.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -141,6 +141,39 @@
     "else:\n",
     "    print(\"學生分數不可以超過300分\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "學生分數為250\n"
+     ]
+    }
+   ],
+   "source": [
+    "score=int(input(\"請輸入學生分數(最高300分):\"))\n",
+    "if score<=300:\n",
+    "\n",
+    "    print(f'學生分數為{score}')\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    print(\"學生分數不可超過300分\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
