--- a/lesson5_2.ipynb
+++ b/lesson5_2.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "請輸入學生分數(最高300分):Number must be at maximum 300.\n",
-      "請輸入學生分數(最高300分):Number must be at minimum 0.\n",
-      "請輸入學生分數(最高300分):Number must be at minimum 0.\n",
-      "請輸入學生分數(最高300分):270\n",
-      "學生分數是284\n",
-      "學生分數是283\n",
-      "學生分數是284\n"
+      "請輸入學生分數(最高300分):250\n",
+      "學生是否符合加分條件?(y,n)'300' is not a valid y/n response.\n",
+      "學生是否符合加分條件?(y,n)學生分數是262\n",
+      "學生分數是262\n",
+      "學生分數是262\n"
      ]
     }
    ],
@@ -26,7 +24,8 @@
     "scores= pyip.inputInt(\"請輸入學生分數(最高300分):\",min=0,max=300)\n",
     "print(scores)\n",
     "if scores <=300:\n",
-    "    is_add=input(\"學生是否符合加分條件?(y,n)\")   \n",
+    "    is_add=pyip.inputYesNo(\"學生是否符合加分條件?(y,n)\",yesVal='y',noVal='n',\n",
+    "    default='n',blank=True)                 \n",
     "\n",
     "    if is_add==\"y\":\n",
     "        scores*=1.05\n",
