--- a/lesson9_4.ipynb
+++ b/lesson9_4.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(5, 10, 'a', 9.0)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#tuple,tuple[int,int]\n",
-    "5,10,'a',9.0\n"
+    "#透過[]建立list的實體\n",
+    "l1 = []\n",
+    "l1.append('a')\n",
+    "l1.append('b')\n",
+    "l1.append('c')\n",
+    "l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#透過list的init(),建立list實體\n",
+    "l2 = list()\n",
+    "l2"
    ]
   },
   {
@@ -27,17 +31,19 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "98 徐徐\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['h', 'e', 'l', 'l', 'o', '!', 'W', 'o', 'r', 'l', 'd', '!']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#tuple拆解\n",
-    "(Score,name)=(98,\"徐徐\")\n",
-    "print (Score,name)"
+    "l3 = list('hello!World!')\n",
+    "l3"
    ]
   },
   {
@@ -48,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
      "execution_count": 1,
@@ -58,32 +64,7 @@
    ],
    "source": [
     "l4 = list(range(1,10))\n",
-    "l4.append(10)\n",
-    "l4.insert(0,0)\n",
-    "l4.pop()\n",
-    "l4.pop(0)\n",
-    "l4.clear()\n",
     "l4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l5 = list(range(1,10))\n",
-    "len(l5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(max(l5))\n",
-    "print(min(l5))"
    ]
   },
   {
