--- a/lesson10_2.ipynb
+++ b/lesson10_2.ipynb
@@ -343,15 +343,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "命名選取器(請輸入1~10)您有以下的建議名字:\n",
-      "['陳怡伶', '王志謙', '李佳彥', '王品星', '元延辛', '游治旺', '彭茹靖', '王惠皓', '楊韻如', '張慧君']\n"
+      "命名選取器(請輸入1~10)您有以下的建議名字:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'nameList' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 6\u001b[0m\n\u001b[1;32m      4\u001b[0m numbers:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m pyip\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m命名選取器(請輸入1~10)\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m您有以下的建議名字:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 6\u001b[0m namePart:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoices(\u001b[43mnameList\u001b[49m,k\u001b[38;5;241m=\u001b[39mnumbers)\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(namePart)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'nameList' is not defined"
      ]
     }
    ],
@@ -367,9 +377,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import random\n",
     "random.randint(40,100)"
@@ -402,25 +423,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "請輸入學生的人數(1~50人):"
+     "ename": "NameError",
+     "evalue": "name 'pyip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m student_nums:\u001b[38;5;28mint\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[43mpyip\u001b[49m\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入學生的人數(1~50人):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      2\u001b[0m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m]\u001b[38;5;241m=\u001b[39mrandom\u001b[38;5;241m.\u001b[39mchoices(nameList,k\u001b[38;5;241m=\u001b[39mstudent_nums)\n\u001b[1;32m      3\u001b[0m names\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyip' is not defined"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['陳逸凡', '胡姿婷', '高士凱']"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -431,24 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "請輸入學生的人數(1~50):10\n",
-      "['馮淑芬', 87, 52, 55, 88, 93]\n",
-      "['劉嘉泰', 70, 65, 75, 71, 54]\n",
-      "['劉耿琦', 89, 56, 62, 92, 84]\n",
-      "['方筠紹', 68, 100, 61, 43, 95]\n",
-      "['林柏洋', 61, 58, 54, 89, 65]\n",
-      "['陳建香', 57, 61, 81, 57, 46]\n",
-      "['陳孝邦', 89, 42, 43, 53, 83]\n",
-      "['蔡世馨', 77, 61, 77, 81, 42]\n",
-      "['昌嘉洋', 71, 86, 48, 87, 55]\n",
-      "['劉依婷', 85, 93, 97, 41, 46]\n"
+     "ename": "NameError",
+     "evalue": "name 'pyip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m student_nums:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mpyip\u001b[49m\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入學生的人數(1~50):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(student_nums)\n\u001b[1;32m      3\u001b[0m names:\u001b[38;5;28mlist\u001b[39m[\u001b[38;5;28mstr\u001b[39m] \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoices(nameList,k\u001b[38;5;241m=\u001b[39mstudent_nums)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyip' is not defined"
      ]
     }
    ],
@@ -468,9 +477,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m student_nums:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mpyip\u001b[49m\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入學生的人數(1~50):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(student_nums)\n\u001b[1;32m      3\u001b[0m scores_nums:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m pyip\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入科目數(1~7):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyip' is not defined"
+     ]
+    }
+   ],
    "source": [
     "student_nums:int = pyip.inputInt(\"請輸入學生的人數(1~50):\",min=1,max=50)\n",
     "print(student_nums)\n",
@@ -484,6 +505,42 @@
     "    for i in range(scores_nums):\n",
     "        stu.append(random.randint(40,100))\n",
     "    print(stu)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyip' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m student_nums:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[43mpyip\u001b[49m\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入學生的人數(1~50):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(student_nums)\n\u001b[1;32m      3\u001b[0m scores_nums:\u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m pyip\u001b[38;5;241m.\u001b[39minputInt(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m請輸入科目數(1~7):\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;28mmin\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;28mmax\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m7\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyip' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "student_nums:int = pyip.inputInt(\"請輸入學生的人數(1~50):\",min=1,max=50)\n",
+    "print(student_nums)\n",
+    "scores_nums:int = pyip.inputInt(\"請輸入科目數(1~7):\",min=1,max=7)\n",
+    "print(scores_nums)\n",
+    "\n",
+    "students:list[list] = []\n",
+    "\n",
+    "names:list[str] = random.choices(nameList,k=student_nums)\n",
+    "for name in names:\n",
+    "    stu:list[int|str] = []\n",
+    "    stu.append(name)    \n",
+    "    for i in range(scores_nums):\n",
+    "        stu.append(random.randint(40,100))\n",
+    "    students.append(stu)\n",
+    "\n",
+    "students"
    ]
   }
  ],
