--- a/lesson12_1/test1.ipynb
+++ b/lesson12_1/test1.ipynb
@@ -362,9 +362,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "寫入成功\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
     "with open(\"class1.csv\",mode='w',encoding='utf-8',newline='') as file:\n",
@@ -373,6 +381,26 @@
     "    writer.writeheader()\n",
     "    writer.writerows(students)\n",
     "print(\"寫入成功\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from csv import DictWriter\n",
+    "\n",
+    "def save_to_csv(students:list[dict]):\n",
+    "    with open(\"class1.csv\",mode='w',encoding='utf-8',newline='') as file:\n",
+    "        fieldnames:list[str] = ['姓名', '國文', '英文', '數學', '地理', '歷史']\n",
+    "        writer:DictWriter = csv.DictWriter(file,fieldnames=fieldnames)\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(students)\n",
+    "    print(\"寫入成功\")\n",
+    "\n",
+    "save_to_csv(students)"
    ]
   }
  ],
