--- a/lesson12_1/test1.ipynb
+++ b/lesson12_1/test1.ipynb
@@ -402,6 +402,27 @@
     "\n",
     "save_to_csv(students)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from csv import DictWriter\n",
+    "\n",
+    "def save_to_csv(students:list[dict],fileName:str)->None:    \n",
+    "    fileNameWithExtension:str = fileName + '.csv'\n",
+    "    with open(fileNameWithExtension,mode='w',encoding='utf-8',newline='') as file:\n",
+    "        fieldnames:list[str] = ['姓名', '國文', '英文', '數學', '地理', '歷史']\n",
+    "        writer:DictWriter = csv.DictWriter(file,fieldnames=fieldnames)\n",
+    "        writer.writeheader()\n",
+    "        writer.writerows(students)\n",
+    "    print(\"寫入成功\")\n",
+    "\n",
+    "save_to_csv(students,'class2')"
+   ]
   }
  ],
  "metadata": {
