--- a/lesson17/lesson17_2.ipynb
+++ b/lesson17/lesson17_2.ipynb
@@ -168,6 +168,30 @@
     "dataFrame1 = pd.read_csv('各鄉鎮市區人口密度.csv')\n",
     "dataFrame1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['statistic_yyy', 'site_id', 'people_total', 'area',\n",
+       "       'population_density'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#取出columns,index\n",
+    "dataFrame1.index\n",
+    "dataFrame1.columns"
+   ]
   }
  ],
  "metadata": {
