--- a/lesson20/lesson20_1.ipynb
+++ b/lesson20/lesson20_1.ipynb
@@ -872,6 +872,98 @@
     "                          '2317.TW':'鴻海'})\n",
     "dataFrame1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataFrame2 = dataFrame1.pct_change()\n",
+    "dataFrame3 = dataFrame2.iloc[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>台積電</th>\n",
+       "      <th>聯電</th>\n",
+       "      <th>聯發科</th>\n",
+       "      <th>鴻海</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>台積電</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.524089</td>\n",
+       "      <td>0.541428</td>\n",
+       "      <td>0.425599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>聯電</th>\n",
+       "      <td>0.524089</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.443472</td>\n",
+       "      <td>0.364299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>聯發科</th>\n",
+       "      <td>0.541428</td>\n",
+       "      <td>0.443472</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.382699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>鴻海</th>\n",
+       "      <td>0.425599</td>\n",
+       "      <td>0.364299</td>\n",
+       "      <td>0.382699</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          台積電        聯電       聯發科        鴻海\n",
+       "台積電  1.000000  0.524089  0.541428  0.425599\n",
+       "聯電   0.524089  1.000000  0.443472  0.364299\n",
+       "聯發科  0.541428  0.443472  1.000000  0.382699\n",
+       "鴻海   0.425599  0.364299  0.382699  1.000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataFrame3.corr()"
+   ]
   }
  ],
  "metadata": {
