--- a/lesson21/lesson21_1.ipynb
+++ b/lesson21/lesson21_1.ipynb
@@ -308,110 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>顏色</th>\n",
-       "      <th>Green</th>\n",
-       "      <th>Red</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>key1</th>\n",
-       "      <th>key2</th>\n",
-       "      <th>縣市</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">a</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
-       "      <th>台中</th>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>台北</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
-       "      <th>台中</th>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>台北</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">b</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
-       "      <th>台中</th>\n",
-       "      <td>8</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>台北</th>\n",
-       "      <td>6</td>\n",
-       "      <td>7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
-       "      <th>台中</th>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>台北</th>\n",
-       "      <td>9</td>\n",
-       "      <td>10.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "顏色            Green   Red\n",
-       "key1 key2 縣市             \n",
-       "a    1    台中      2   NaN\n",
-       "          台北      0   1.0\n",
-       "     2    台中      5   NaN\n",
-       "          台北      3   4.0\n",
-       "b    1    台中      8   NaN\n",
-       "          台北      6   7.0\n",
-       "     2    台中     11   NaN\n",
-       "          台北      9  10.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'frame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mframe\u001b[49m\u001b[38;5;241m.\u001b[39mstack(level\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m縣市\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'frame' is not defined"
+     ]
     }
    ],
    "source": [
