--- a/lesson21/lesson21_5.ipynb
+++ b/lesson21/lesson21_5.ipynb
@@ -1645,176 +1645,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>總票價</th>\n",
-       "      <th>小費</th>\n",
-       "      <th>吸煙者</th>\n",
-       "      <th>日期</th>\n",
-       "      <th>時間</th>\n",
-       "      <th>大小</th>\n",
-       "      <th>小費比例</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>吸煙者</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">No</th>\n",
-       "      <th>88</th>\n",
-       "      <td>24.71</td>\n",
-       "      <td>5.85</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Thur</td>\n",
-       "      <td>Lunch</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.236746</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>20.69</td>\n",
-       "      <td>5.00</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.241663</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>10.29</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.252672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>7.51</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Thur</td>\n",
-       "      <td>Lunch</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.266312</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>232</th>\n",
-       "      <td>11.61</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.291990</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Yes</th>\n",
-       "      <th>109</th>\n",
-       "      <td>14.31</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.279525</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>23.17</td>\n",
-       "      <td>6.50</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0.280535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>3.07</td>\n",
-       "      <td>1.00</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.325733</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>9.60</td>\n",
-       "      <td>4.00</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.416667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>172</th>\n",
-       "      <td>7.25</td>\n",
-       "      <td>5.15</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.710345</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           總票價    小費  吸煙者    日期      時間  大小      小費比例\n",
-       "吸煙者                                                  \n",
-       "No  88   24.71  5.85   No  Thur   Lunch   2  0.236746\n",
-       "    185  20.69  5.00   No   Sun  Dinner   5  0.241663\n",
-       "    51   10.29  2.60   No   Sun  Dinner   2  0.252672\n",
-       "    149   7.51  2.00   No  Thur   Lunch   2  0.266312\n",
-       "    232  11.61  3.39   No   Sat  Dinner   2  0.291990\n",
-       "Yes 109  14.31  4.00  Yes   Sat  Dinner   2  0.279525\n",
-       "    183  23.17  6.50  Yes   Sun  Dinner   4  0.280535\n",
-       "    67    3.07  1.00  Yes   Sat  Dinner   1  0.325733\n",
-       "    178   9.60  4.00  Yes   Sun  Dinner   2  0.416667\n",
-       "    172   7.25  5.15  Yes   Sun  Dinner   2  0.710345"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'tips' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtop\u001b[39m(df):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m df\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m小費比例\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m5\u001b[39m:]\n\u001b[1;32m----> 4\u001b[0m \u001b[43mtips\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m吸煙者\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39mapply(top)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'tips' is not defined"
+     ]
     }
    ],
    "source": [
